# veld

./: .env.example  .gitignore  .mcp.json  ALIGNMENT_IMPLEMENTATION.md  BENCHMARKS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EMBEDDING_ALIGNMENT.md  LICENSE  NOTICE  PROGRESS.md  README-python.md  README-rust.md  README.md  RECTIFICATION.md  REMEDIATION_PLAN.md  SECURITY.md  STPI_PITCH_DECK.md  apply_layers.py  bhashini-authorization-letter.html  build.rs  docker-compose.yml  job_log.txt  locomo_results.json  openapi.yaml  pyproject.toml  start_server.bat  test_all_apis.py  test_latency.py  test_memory_benchmark.ts  test_models_and_latency.py  test_wheel_comprehensive.py  veld-logo-basecamp.html  veld-vs-shodh-comparison.html  veld_config.example.json
.claude/: settings.json
.githooks/: post-commit  pre-commit
.github/: FUNDING.yml  copilot-instructions.md
bench/: calibrate.py  llm_profile.rs  run_eval.sh
benches/: adaptive_memory_benchmarks.rs  associative_retrieval_benchmarks.rs  cognitive_benchmarks.rs  graph_benchmarks.rs  hebbian_benchmarks.rs  integration_benchmarks.rs  memory_benchmarks.rs  ner_benchmarks.rs  pipeline_benchmarks.rs  relevance_benchmarks.rs  softmax_benchmarks.rs  streaming_benchmarks.rs
benchmarks/: debug_graph.py  debug_locomo.py  debug_retrieval.py  eval_metrics.py  locomo_10_results.json  locomo_api_benchmark.py  locomo_api_benchmark.sh  locomo_api_locomo_bench_1774792919.json  locomo_debug_results.json  locomo_fixed_results.json  locomo_full_dialogue.json  locomo_gpt4_results.json  locomo_http_api_test.json  locomo_llm_judge.py  locomo_mc10_eval.py  locomo_multihop_fix.json  locomo_results.json  locomo_temporal_fixed.json  longmemeval_eval.py  requirements-longmemeval.txt  requirements.txt
bugs-remedies/: 2025-12-07-algorithm-audit.md  2025-12-07-audit2.md  2025-12-07-detailed.md  2025-12-07-summary.md
docs/: 20-dimensional-interface-analysis.md  README.md  book.toml  coherence-galaxy-map.md  install-pre-commit.sh  mem0-vs-shodh-memory-comparison.md  neuroscience-5w-memory-design.md  regenerate.sh  user-auth.md
docs/generators/: Cargo.toml
docs/generators/src/: lib.rs
evaluations/: agi_domain_trilayer.html  benchmark_v0.5.0_locomo.md  bifocal_2026-03-28_entity-boost-threshold.json  bifocal_2026-03-28_locomo-dataset-3agent-verification.json  bifocal_2026-03-28_locomo-dataset-errors.json  bifocal_2026-03-28_locomo-dataset-reddit.md  bifocal_2026-03-28_locomo-final-reddit.md  bifocal_2026-03-28_locomo-regression.json  bifocal_2026-03-28_reddit-math-utilisation.json  bifocal_2026-03-29_claude-shodh-coherence.json  bifocal_2026-03-29_claude-veld-coherence.json  bifocal_2026-03-29_final_lever.json  bifocal_2026-03-29_nomic_upgrade_plan.json  bifocal_2026-03-29_query_side_fixes.json  bifocal_2026-03-29_temporal_superlative.json  bifocal_2026-03-29_unseen_dimensions.json  bifocal_2026-03-30_adaptive_cross_encoder.json  bifocal_2026-04-03_shared-server-model-onnx.json  bifocal_2026-04-03_v09-toroid-completeness.json  bifocal_2026-05-21_veld-remediation-plan.json  bifocal_overwatch_2026-03-28_p0-p4-plan.json  dataset_topology_v2.html  foureyes_2026-03-28_backboard-gap.json  intugest_2026-03-27_bai-survey-ai-memory.json  intugest_2026-03-28_introspective.json  intugest_2026-03-30_adaptive_cross_encoder.json  intugest_2026-03-30_benchmark_lies.json  intugest_2026-03-30_candlekeep_never_forget.json  intugest_2026-03-30_mi_theory_cptsd.json  locomo_api_v0.5.5_bench.json  locomo_judge_2052f54.json  locomo_judge_58f66ad.json  locomo_judge_636e0f0.json  locomo_judge_afd99b4.json  locomo_v0.5.0_5b5767b.json  locomo_v0.6.0_1b75971.json  locomo_v0.6.1_05836f0.json  locomo_v0.6.1_264d31a.json  locomo_v0.6.1_602f161.json  locomo_v0.6.1_9d80f35.json  (+44 more)
examples/: basic_usage.py  robot_example.py  semantic_search.py
homebrew/: shodh-memory.rb  veld.rb
hooks/: README.md  claude-code-ingest.sh  claude-settings.json  memory-hook.test.ts  memory-hook.ts  session-start.sh  stop.sh  user-prompt.sh
marketing/: directory-submissions.md
mcp-server/: .gitignore  README.md  index.ts  package.json  server.json  string-utils.ts  tsconfig.json
monitor/src-tauri/: Cargo.toml  tauri.conf.json
monitor/src-tauri/capabilities/: default.json
monitor/src-tauri/icons/: icon.icns
monitor/src-tauri/src/: app.rs  main.rs  tray.rs
notebooks/: shodh_memory_demo.ipynb  veld_demo.ipynb
python/: README.md
scripts/: bump-version.sh  cargo-dev.sh  check-secrets.sh  convert-coreml.py  fortress-build.sh  install.ps1  install.sh  installer.nsi  run-rectification.sh  setup-libclang-env.sh  shodh-statusline.sh  start-veld-server.sh  veld-statusline.sh  veld-worktree-spawn.ps1  veld-worktree-spawn.sh
seeds/: antidote-overlook-20260330.json  overlook-20260330.json
seps/: SEP-002-memory-interchange-format.md  conversation-events.md  example.mif.json  mif-v1.schema.json
shodh-telegram/: .env.example
shodh-whatsapp/: .env.example  package.json
specs/: CODEBASE_INTEGRATION.md  README.md  openapi.yaml
src/: auth.rs  backup.rs  cli.rs  config.rs  constants.rs  decay.rs  decay_scales.rs  earth.rs  encryption.rs  errors.rs  graph_memory.rs  lib.rs  main.rs  mcp.rs  metrics.rs  middleware.rs  python.rs  rate_limit_governance.rs  relevance.rs  roots.rs  server.rs  similarity.rs  streaming.rs  tracing_setup.rs
status-core/: Cargo.toml
status-core/src/: client.rs  dto.rs  lib.rs  snapshot.rs  sse.rs
status-tui/: Cargo.toml
status-tui/src/: main.rs
status-widget/: Cargo.toml
status-widget/src/: lib.rs
tests/: adaptive_memory_tests.rs  agent_session_e2e.rs  benchmark_evaluation.rs  bincode_schema_probe.rs  brutal_stress_tests.rs  bug_regression_tests.rs  chunking_retrieval_tests.rs  cognitive_memory_tests.rs  cognitive_stress_test.rs  consolidation_tests.rs  dataset_loader.rs  fact_narratives_tests.rs  file_memory_tests.rs  graph_memory_tests.rs  handler_tests.rs  hebbian_learning_tests.rs  integration_tests.rs  integration_webhook_tests.rs  locomo_benchmark.rs  memory_persistence_tests.rs  memory_tiering_tests.rs  (+11 more)
(+356 files in other folders)
