[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "veld"
version = "0.7.19"
description = "Local-first AI memory system for robotics, drones, and edge AI - 100% offline capable"
authors = [{name = "Veld Team", email = "john@portll.net"}]
license = {text = "BUSL-1.1"}
readme = "README-python.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "memory", "ai", "edge-computing", "robotics", "drones", "rag",
    "vector-database", "offline", "ros2", "autonomous", "navigation",
    "gps", "spatial", "mission-tracking", "sensor-data"
]

[project.urls]
Homepage = "https://www.veld-rag.com/memory"
Repository = "https://github.com/Portll/veld"
Documentation = "https://www.veld-rag.com/memory"
"Bug Tracker" = "https://github.com/Portll/veld/issues"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
openai-agents = ["openai-agents>=0.0.7", "pydantic>=2.0.0"]
all = ["langchain-core>=0.2.0", "llama-index-core>=0.10.0", "openai-agents>=0.0.7", "pydantic>=2.0.0"]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "veld.veld"
strip = true
