[package]
name = "veld-status-core"
version = "0.1.0"
edition = "2021"
authors = ["Portll <john@portll.net>"]
description = "Core data model and HTTP/SSE client for the Veld status TUI and GUI"
license = "BUSL-1.1"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.6"
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[workspace]
