[package]
name = "veld-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Portll <john@portll.net>"]
description = "Veld status monitor — system-tray GUI"
license = "BUSL-1.1"

[[bin]]
name = "veld-monitor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
veld-status-core = { path = "../../status-core" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# `lto = "thin"` + parallel codegen is the safe middle ground:
# - opt-level = "z" still optimises for size
# - thin LTO cuts the Windows linker memory ceiling from ~6 GB (with full LTO)
#   to ~2 GB, fixing the STATUS_STACK_BUFFER_OVERRUN we hit at link time
# - codegen-units = 16 lets the linker parallelise instead of feeding it a
#   single huge module
# - strip = true keeps the binary small (~12-15 MB vs ~30+ MB unstripped)
opt-level = "z"
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[workspace]
